--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "vim-config"]
 	path = vim-config
 	url = git@github.com:kernicPanel/vim-config.git
+[submodule "oh-my-zsh"]
+	path = oh-my-zsh
+	url = git@github.com:kernicPanel/oh-my-zsh.git
