--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "vim-config"]
 	path = vim-config
-	url = https://github.com/kernicPanel/vim-config.git
+	url = git://github.com/kernicPanel/vim-config.git
 [submodule "oh-my-zsh"]
 	path = oh-my-zsh
-	url = https://github.com/kernicPanel/oh-my-zsh.git
+	url = git://github.com/kernicPanel/oh-my-zsh.git
